--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <link rel="stylesheet" href="styles/index.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuid.min.js" integrity="sha512-UNM1njAgOFUa74Z0bADwAq8gbTcqZC8Ej4xPSzpnh0l6KMevwvkBvbldF9uR++qKeJ+MOZHRjV1HZjoRvjDfNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script defer src="scripts/index.js"></script>
+        <script defer src="scripts/defs/index.js"></script>
         <script defer src="scripts/defs/level.js"></script>
         <script defer src="scripts/defs/entry.js"></script>
         <script defer src="scripts/defs/tile.js"></script>
