new game implementation

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuid.min.js" integrity="sha512-UNM1njAgOFUa74Z0bADwAq8gbTcqZC8Ej4xPSzpnh0l6KMevwvkBvbldF9uR++qKeJ+MOZHRjV1HZjoRvjDfNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script defer src="scripts/index.js"></script>
         <script defer src="scripts/defs/index.js"></script>
+        <script defer src="scripts/defs/game.js"></script>
         <script defer src="scripts/defs/level.js"></script>
         <script defer src="scripts/defs/entry.js"></script>
         <script defer src="scripts/defs/tile.js"></script>
@@ -13,7 +14,7 @@
         <script defer src="scripts/game.js"></script>
     </head>
     <body>
-        <canvas id="game"></canvas>
-        <nav><button id="toggle">TOGGLE</button></nav>
+        <div><button id="start">start</button></div>
+        <nav><button id="toggle">toggle</button></nav>
     </body>
 </html>
