--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         <script defer src="scripts/game.js"></script>
     </head>
     <body>
-        <div><button id="start">start</button></div>
+        <div>
+            <h1>Super Game</h1>
+            <button id="start">start</button>
+        </div>
         <nav><button id="toggle">toggle</button></nav>
     </body>
 </html>
