tile placement and rendering

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             <h1>Super Game</h1>
             <button id="start">start</button>
         </div>
-        <nav><button id="toggle">toggle</button></nav>
+        <nav>
+            <button id="toggle">toggle</button>
+            <button id="dirt">dirt</button>
+            <button id="space">space</button>
+        </nav>
     </body>
 </html>
