--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <button id="toggle">toggle</button>
             <button id="dirt">dirt</button>
             <button id="space">space</button>
+            <button id="andesite">andesite</button>
         </nav>
     </body>
 </html>
