updated camera and entity

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script defer src="scripts/defs/index.js"></script>
         <script defer src="scripts/defs/game.js"></script>
         <script defer src="scripts/defs/level.js"></script>
-        <script defer src="scripts/defs/entry.js"></script>
+        <script defer src="scripts/defs/entity.js"></script>
         <script defer src="scripts/defs/tile.js"></script>
         <script defer src="scripts/defs/character.js"></script>
         <script defer src="scripts/defs/player.js"></script>
