--- a/index.html
+++ b/index.html
@@ -3,16 +3,7 @@
         <link rel="stylesheet" href="styles/index.css">
         <script src="https://kit.fontawesome.com/6564cd73e2.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuid.min.js" integrity="sha512-UNM1njAgOFUa74Z0bADwAq8gbTcqZC8Ej4xPSzpnh0l6KMevwvkBvbldF9uR++qKeJ+MOZHRjV1HZjoRvjDfNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script defer src="scripts/index.js"></script>
-        <script defer src="scripts/defs/index.js"></script>
-        <script defer src="scripts/defs/game.js"></script>
-        <script defer src="scripts/defs/level.js"></script>
-        <script defer src="scripts/defs/entity.js"></script>
-        <script defer src="scripts/defs/tile.js"></script>
-        <script defer src="scripts/defs/character.js"></script>
-        <script defer src="scripts/defs/player.js"></script>
-        <script defer src="scripts/controls.js"></script>
-        <script defer src="scripts/game.js"></script>
+        <script defer src="scripts/index.js" type="module"></script>
     </head>
     <body>
         <div id="main-menu" class="modal">
